Update zshrc, vimrc, and tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,8 @@ bind C-a send-prefix
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h "#{pane_current_path}"
+bind - split-window -v "#{pane_current_path}"
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
